# WormtailBot

./: .gitignore  Cargo.toml  README.md  ideas.txt
config/: t.ron.example
src/: app.rs  auth.rs  bot.rs  command.rs  comunication.rs  config.rs  controller.rs  main.rs  request_paterns.rs  trigger.rs
src/bot/: mod.rs  wormtail.rs
