[package]
name = "ratbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
env_logger = "0.9.0"
log = "0.4.16"
reqwest = "0.11.10"
ron = "0.7.0"
serde = "1.0.136"
serde_json = "1.0.79"
tokio =  { version = "1.17.0", features = ["rt-multi-thread"] }
twitch-irc ="4.0.0"
